# test-rust

./: Cargo.toml  Dockerfile
src/: main.rs
