[package]
name = "rust_rocket_web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
reqwest = "0.11.22"
once_cell = "1.17.2"  # or whichever version is the latest or most compatible